# cosmic-ext-showdesktop

./: Cargo.toml  LICENSE  README.md
data/: com.example.CosmicShowDesktop.desktop  com.example.CosmicToggleMinimizeAll.desktop
src/: main.rs  wm.rs
